[package]
name = "example"
version = "2.0.0"
authors = ["Some Team"]
build = "build.rs"
edition = "2018"

[dependencies]
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sp-io = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sc-service = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sc-network = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
grandpa-primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sc-client = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
sc-basic-authority = { git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }
runtime = { path = "runtime" }

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { package = "substrate-build-script-utils", git = "https://github.com/paritytech/substrate.git", rev = "e267d210178e646996dffafb6cd0c8b9d4a4b87f" }

[workspace]
members = ["runtime"]

[[bin]]
name = "example"
path = "src/main.rs"
